--- a/FileStructure.html
+++ b/FileStructure.html
@@ -10,14 +10,15 @@ Acts as the "root" of our document -->
     <!-- In the head of document -->
 
 </head>
-<body>
+<body style="background-color: rgba(117, 225, 255, 0.217); text-align: center;">
     <!-- Contains the content that will be visible to the user when they visit a page  -->
     <!-- Heading(Six level) and Paragraphs(Regular text)-->
-    <h1>Hey Connections!!👋🏻👋🏻</h1>
+    <h1>👋🏻Hey Connections!!👋🏻</h1>
     <h3>Follow me on Github <a href="http://Github.com/Anmol8604">Github.com/Anmol8604</a></h3>
     <h5>Pleasure to connecting you on Github!!😜😜</h6>
 
     <p>I can't wait to explore more Html & Css</p>
+    <image src="https://images.app.goo.gl/gtetUDziM4r7oejt5" alt="Say hello!!"></image>
      
 
 </body>
