Internal and External CSS

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <title>All Aboud Earth and Mars</title>
+        <style>
+            h1{
+                font-size: 60px;
+            }
+            p{
+                font-size: 24px;
+                color: blueviolet;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="font-size: 60px;">Earth and Mars</h1>
+        <h1>Earth and Mars</h1>
         <p>Earth and Mars are two planets within our solar system.</p>
         <p>Which planet would you like to know better?</p>
         <ul>
